Update student data in Adminpanel.html

--- a/Latihan/Adminpanel.html
+++ b/Latihan/Adminpanel.html
@@ -62,8 +62,16 @@
 						</thead>
 						<tbody>
 							<tr class="even:bg-gray-100 odd:bg-white">
+								<td class="py-2 px-4">20211001</td>
+								<td class="py-2 px-4">Asep Wawa</td>
+								<td class="py-2 px-4 text-center space-x-2">
+									<button class="bg-yellow-500 text-white px-2 py-1 rounded hover:bg-yellow-600" onclick="editMahasiswa(this)">Edit</button>
+									<button class="bg-red-500 text-white px-2 py-1 rounded hover:bg-red-600" onclick="deleteMahasiswa(this)">Hapus</button>
+								</td>
+							</tr>
+							<tr class="even:bg-gray-100 odd:bg-white">
 								<td class="py-2 px-4">20211002</td>
-								<td class="py-2 px-4">Siti Aminah</td>
+								<td class="py-2 px-4">Ahmad Redo</td>
 								<td class="py-2 px-4 text-center space-x-2">
 									<button class="bg-yellow-500 text-white px-2 py-1 rounded hover:bg-yellow-600" onclick="editMahasiswa(this)">Edit</button>
 									<button class="bg-red-500 text-white px-2 py-1 rounded hover:bg-red-600" onclick="deleteMahasiswa(this)">Hapus</button>
@@ -71,7 +79,7 @@
 							</tr>
 							<tr class="even:bg-gray-100 odd:bg-white">
 								<td class="py-2 px-4">20211003</td>
-								<td class="py-2 px-4">Ahmad Fauzi</td>
+								<td class="py-2 px-4">Dewi Yunani</td>
 								<td class="py-2 px-4 text-center space-x-2">
 									<button class="bg-yellow-500 text-white px-2 py-1 rounded hover:bg-yellow-600" onclick="editMahasiswa(this)">Edit</button>
 									<button class="bg-red-500 text-white px-2 py-1 rounded hover:bg-red-600" onclick="deleteMahasiswa(this)">Hapus</button>
@@ -79,7 +87,7 @@
 							</tr>
 							<tr class="even:bg-gray-100 odd:bg-white">
 								<td class="py-2 px-4">20211004</td>
-								<td class="py-2 px-4">Dewi Lestari</td>
+								<td class="py-2 px-4">Budi Speed</td>
 								<td class="py-2 px-4 text-center space-x-2">
 									<button class="bg-yellow-500 text-white px-2 py-1 rounded hover:bg-yellow-600" onclick="editMahasiswa(this)">Edit</button>
 									<button class="bg-red-500 text-white px-2 py-1 rounded hover:bg-red-600" onclick="deleteMahasiswa(this)">Hapus</button>
@@ -87,14 +95,6 @@
 							</tr>
 							<tr class="even:bg-gray-100 odd:bg-white">
 								<td class="py-2 px-4">20211005</td>
-								<td class="py-2 px-4">Rudi Hartono</td>
-								<td class="py-2 px-4 text-center space-x-2">
-									<button class="bg-yellow-500 text-white px-2 py-1 rounded hover:bg-yellow-600" onclick="editMahasiswa(this)">Edit</button>
-									<button class="bg-red-500 text-white px-2 py-1 rounded hover:bg-red-600" onclick="deleteMahasiswa(this)">Hapus</button>
-								</td>
-							</tr>
-							<tr class="even:bg-gray-100 odd:bg-white">
-								<td class="py-2 px-4">20211001</td>
 								<td class="py-2 px-4">Budi Santoso</td>
 								<td class="py-2 px-4 text-center space-x-2">
 									<button class="bg-yellow-500 text-white px-2 py-1 rounded hover:bg-yellow-600" onclick="editMahasiswa(this)">Edit</button>
