--- a/Latihan/login.html
+++ b/Latihan/login.html
@@ -10,7 +10,7 @@
             <form action="" id="loginform" class="space-y-4" onsubmit="handleLogin(event)">
                 <div>
                     <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
-                    <Input type="email" id="email" name="email" required placeholder="Masukan Email Kakak" class="w-full px-4 py-2 mt-1 border rounded-lg focus:outline-none focus:ring focus-blue-300">
+                    <Input type="email" id="email" name="email" required placeholder="Masukan Email Anda" class="w-full px-4 py-2 mt-1 border rounded-lg focus:outline-none focus:ring focus-blue-300">
                     </Input>                                        
                 </div>
                 <div>
